--- a/pom.xml
+++ b/pom.xml
@@ -121,12 +121,7 @@
             <artifactId>gson</artifactId>
             <version>2.9.0</version>
         </dependency>
-        <!--引入shiro和ehcache-->
-        <dependency>
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-ehcache</artifactId>
-            <version>1.5.3</version>
-        </dependency>
+
 
         <!--druid-->
         <dependency>
@@ -150,6 +145,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
         </dependency>
 
     </dependencies>
