--- a/myblog-commons/pom.xml
+++ b/myblog-commons/pom.xml
@@ -24,6 +24,12 @@
             <version>3.12.0</version>
         </dependency>
 
+        <!-- elasticsearch -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
