--- a/myblog-consumer/pom.xml
+++ b/myblog-consumer/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>myblog-mail</artifactId>
+    <artifactId>myblog-consumer</artifactId>
 
 <dependencies>
 
