--- a/myblog-server/pom.xml
+++ b/myblog-server/pom.xml
@@ -27,14 +27,6 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.22</version>
-            <scope>provided</scope>
-        </dependency>
-
-
 
         <dependency>
             <groupId>mysql</groupId>
@@ -179,6 +171,12 @@
             <groupId>com.yikolemon</groupId>
             <artifactId>myblog-commons</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <!-- elasticsearch -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
         </dependency>
 
     </dependencies>
